<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teckenspråkslexikon</string>
    <string name="search_hint">Sök i lexikonet</string>
    <string name="settings">Inställningar</string>
    <string name="no_results"><![CDATA[
        <strong>Din sökning (<em>%1$s</em>) gav tyvärr inga träffar.</strong>

        <p><a href="%2$s">Sök efter <em>%1$s</em> på teckensprakslexikon.su.se</a>.
    ]]></string>
    <string name="no_bookmarks">Du har inga bokmärkta tecken.</string>
...
    <string name="fail_tts">Det gick inte att läsa upp översättningen.</string>
    <string name="random_signs">Slumpmässigt utvalda tecken</string>
    <string name="recently_seen">Nyligen öppnade tecken</string>
    <string name="clear_search_box">Rensa sökfältet</string>
    <string name="clear_search_history">Rensa sökhistorik</string>
    <string name="clear_sign_history">Rensa visningshistorik</string>
    <string name="remove_all_bookmarks">Ta bort alla bokmärken</string>
    <string name="open_in_browser">Öppna i webbläsare</string>
    <string name="find_simliar">Hitta liknande tecken</string>
    <string name="open_source_licenses">Licenser för öppen källkod</string>
    <string name="about">Om</string>
    <string name="about_the_app">Om appen</string>
    <string name="clear">Rensa</string>
...
    <string name="reset">Nollställ</string>

    <string name="unorganized_bookmarks">Osorterade bokmärken</string>
    <string name="add_folder">Skapa mapp</string>
    <string name="delete_folder">Ta bort mapp</string>
    <string name="delete_folder_x">Ta bort mappen %1$s?</string>
    <string name="name">Namn</string>
    <string name="ok">OK</string>
    <string name="cancel">Avbryt</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>

    <string name="title_home">Hem</string>
    <string name="title_history">Historik</string>
    <string name="title_favorites">Bokmärken</string>

    <string name="search_help" formatted="false"><![CDATA[
...
