<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/favorite"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:title="@string/add_bookmark" />

    <item android:id="@+id/search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/openInBrowser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
