<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_folder"
        android:icon="@drawable/ic_new_folder"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/add_folder" />

</menu>
